# user_service

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
config/: config.toml  prod_config.toml
src/application/common/: command.py  event.py  exceptions.py  query.py
src/application/common/interfaces/: __init__.py
src/application/common/pagination/: __init__.py  dto.py
src/application/user/: exceptions.py
src/application/user/commands/: __init__.py  create_user.py  delete_department.py  delete_photo_url.py  delete_user.py  set_department.py  set_full_name.py  set_password.py  set_photo_url.py  set_role.py  set_username.py
src/application/user/dto/: deleted_user.py  user.py  users.py
src/application/user/queries/: __init__.py  get_user_by_id.py  get_user_by_username.py  get_users.py
src/domain/common/entities/: __init__.py  aggregate_root.py
src/domain/common/events/: __init__.py  base.py
src/domain/common/exceptions/: __init__.py  base.py
src/domain/common/value_objects/: __init__.py  base.py
src/domain/user/: exceptions.py
src/domain/user/entities/: __init__.py  user.py
src/domain/user/events/: __init__.py  department_deleted.py  (+9 more)
src/infrastructure/db/: converters.py  exception_mapper.py
src/infrastructure/di/: __init__.py
src/infrastructure/event_bus/: converters.py  event_bus.py  exchanges.py
src/infrastructure/log/: processors.py
src/infrastructure/mediator/: main.py
src/infrastructure/message_broker/: __init__.py  config.py  factories.py  main.py  message_broker.py  uow.py
src/presentation/api/: config.py
(+30 files in other folders)
